testsuite/poke.pkl/funcall-def-diag-8.pk
/* { dg-do compile } */

defun foo = (string[] a, int b = a[2]) void: {} /* { dg-error ".*\n.*" } */
